Fix lots of stuff and list overflow problem

--- a/app/assets/stylesheets/list_index.scss
+++ b/app/assets/stylesheets/list_index.scss
@@ -80,6 +80,7 @@ $list-hover-color: #B7D1ED;
 
         .active {
           font-weight: bold;
+          color: #0063BA;
         }
       }
 
