--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -9,6 +9,7 @@
 .session-main {
   display: flex;
   flex-direction: row;
+  height: 100vh;
 
   .session-left {
     width: 50%;
@@ -18,7 +19,7 @@
       display: flex;
       flex-direction: column;
       width: 420px;
-      height: 100vh;
+      height: 100%;
       margin-right: 20px;
       padding-left: 15px;
       padding-right: 15px;
