--- a/app/assets/stylesheets/task_nav.scss
+++ b/app/assets/stylesheets/task_nav.scss
@@ -9,58 +9,86 @@ $dark-grey: #666660;
   display: flex;
   flex-direction: column;
   position: relative;
+  align-content: flex-start;
+  box-sizing: border-box;
 
   .tab-nav {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    height: 50px;
+    min-height: 50px;
     padding-right: 20px;
     border-bottom: 1px dotted $very-light-grey;
-
-    .task-tab {
-      position: relative;
-      top: 1px;
-      font-size: 13px;
-      color: #0063BA;
-      align-self: flex-end;
-      padding: 6px 12px 6px 12px;
-      cursor: pointer;
-    }
-    .task-tab.selected {
-      font-weight: bold;
-      color: black;
-      border: 1px dotted $very-light-grey;
-      border-bottom: 1px solid white;
-    }
   }
 
+  .task-tool-bar {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    min-height: 50px;
+    align-items: center;
+    border-bottom: 1px dotted $very-light-grey;
+  }
+
+  .task-bar.extend {
+    min-height: 90px;
+  }
+  .task-bar {
+    transition: min-height 0.2s;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 50px;
+    max-height: 50px;
+    border-bottom: 1px dotted $very-light-grey;
+  }
+
+  .tasks-index-div {
+    overflow-y: scroll;
+  }
 }
 
+.tab-nav {
+  .task-tab {
+    position: relative;
+    top: 1px;
+    font-size: 13px;
+    color: #0063BA;
+    align-self: flex-end;
+    padding: 6px 12px 6px 12px;
+    cursor: pointer;
+  }
+  .task-tab.selected {
+    font-weight: bold;
+    color: black;
+    border: 1px dotted $very-light-grey;
+    border-bottom: 1px solid white;
+  }
+}
+
+html, body, main, .app, .main-page-div,
+.main-page-main, .task-list-details-section,
+.tasks-nav-section, .task-nav-div, .tasks-index-div {
+  height: 100%;
+}
 // TODO: fix task index overflow problem
-// .tasks-index-div {
-//   height: 100%;
-//   width: 100%;
-//   // position: relative;
-//   display: flex;
-//   flex-flow: column;
-//   .task-index {
-//     height: 100%;
-//     overflow-y: auto;
-//     // top: 113px;
-//     // top: 0px;
-//     // position: absolute;
-//   }
-// }
+.tasks-index-div {
+  // height: 100%;
+  // width: 100%;
+  // position: relative;
+  // display: flex;
+  // flex-flow: column;
+
+  .task-index {
+    // height: 100%;
+    // overflow-y: auto;
+    // top: 113px;
+    // top: 0px;
+    // position: absolute;
+  }
+}
 
 .task-tool-bar {
-  display: flex;
-  flex-direction: row;
-  position: relative;
-  width: 100%;
-  height: 50px;
-  border-bottom: 1px dotted $very-light-grey;
-
   .task-option:hover {
     color: black;
   }
@@ -71,11 +99,11 @@ $dark-grey: #666660;
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: 30px;
     border: 1px solid $light-grey;
     border-radius: 3px;
-    line-height: 30px;
-    margin: 10px 17px;
-    padding: 0px 3px 0px 5px;
+    margin: 0px 17px;
+    padding: 0px 8px;
     user-select: none;
     cursor: pointer;
 
@@ -118,17 +146,7 @@ $dark-grey: #666660;
   }
 }
 
-
 .task-bar {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 50px;
-  background: white;
-  border-bottom: 1px dotted $very-light-grey;
-
-  transition: height 0.2s;
-
   .task-create {
     display: block;
     width: calc(100% - 34px - 8px);
